[package]
name = "mathcli"
description =  "Simple math for the cli"
license = "MIT"
version = "0.1.2"
authors = ["Michael Alvarino <michael.alvarino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
log = "0.4.11"
stderrlog = "0.5.0"
